--- a/docker.build.demo/pom.xml
+++ b/docker.build.demo/pom.xml
@@ -4,16 +4,51 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>com.zzp</groupId>
     <artifactId>docker.build.demo</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
+    <packaging>jar</packaging>
+
+    <properties>
+        <spring.boot.base.version>0.0.1-SNAPSHOT</spring.boot.base.version>
+    </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.zzp</groupId>
             <artifactId>spring.boot.base</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${spring.boot.base.version}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.3.6.RELEASE</version>
+                <configuration>
+                    <mainClass>com.zzp.docker.DockerDemoApp</mainClass>
+                    <fork>true</fork>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
